--- a/AddRecipePage.html
+++ b/AddRecipePage.html
@@ -4,172 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Add New Recipe</title>
+  <link rel="stylesheet" href="style.css">
 
-  <style>
- /* ===== Fix layout overlap ===== */
-*{ box-sizing:border-box; }
-body{ margin:0; background-color:#efe1b5; font-family: "Segoe UI", Tahoma, Arial, sans-serif; }
-
-
-.add-page{
-  max-width: 1100px;
-  margin: 3rem auto;
-  padding: 2rem;
-  background:#fff;
-  border-radius:24px;
-  border:1px solid #cdb885;
-  box-shadow:0 18px 40px rgba(110,80,52,0.18);
-}
-
-/* Header */
-.add-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  gap:1rem;
-  margin-bottom: 2rem;
-}
-
-.add-header h1{
-  margin:0;
-  font-size:2.3rem;
-  color:#6e5034;
-  font-weight:800;
-}
-
-/* Form card */
-.form-card{
-  border-radius:20px;
-  padding: 1.6rem;
-  border:1px solid #efe1b5;
-  box-shadow: inset 0 0 0 1px rgba(205,184,133,0.28);
-}
-
-/* Grid */
-.grid{
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem 1.2rem;
-  align-items: start;
-}
-
-.full{ grid-column: 1 / -1; }
-
-label{
-  display:block;
-  font-weight:800;
-  color:#6e5034;
-  margin-bottom:.45rem;
-}
-
-/* Inputs */
-.field{
-  width:100%;
-  display:block;
-  padding:.95rem 1rem;
-  border-radius:14px;
-  border:1px solid #efe1b5;
-  background:#fff;
-  color:#5d4a32;
-  outline:none;
-  transition:.2s ease;
-}
-
-.field:focus{
-  border-color:#cdb885;
-  box-shadow:0 0 0 4px rgba(205,184,133,0.22);
-}
-
-textarea.field{ min-height:120px; resize:vertical; }
-
-/* Section titles */
-.section-title{
-  margin: 1.4rem 0 .9rem;
-  padding-top:1.2rem;
-  border-top:1px dashed #efe1b5;
-  color:#6e5034;
-  font-size:1.2rem;
-  font-weight:800;
-}
-
-/* Dynamic rows */
-.row{
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-  margin-bottom:.9rem;
-}
-
-.row-1col{ grid-template-columns: 1fr; }
-
-/* Buttons */
-.actions{
-  display:flex;
-  gap:.8rem;
-  flex-wrap:wrap;
-  margin-top:.9rem;
-}
-
-.btn{
-  display:inline-flex;
-  align-items:center;
-  gap:.65rem;
-  padding:.9rem 1.5rem;
-  border-radius:30px;
-  cursor:pointer;
-  font-weight:800;
-  text-decoration:none;
-  border:none;
-  transition:.25s ease;
-}
-
-.btn.primary{
-  background:#6e5034;
-  color:#fff;
-  box-shadow:0 8px 22px rgba(110,80,52,0.3); 
-}
-
-.btn.primary:hover{
-  background:#8a6848;
-  transform: translateY(-2px);
-}
-
-.btn.secondary{
-  background: rgba(110,80,52,0.10);
-  color:#6e5034;
-  border:1px solid #efe1b5;
-}
-
-.btn.secondary:hover{
-  background:#cdb885;
-  transform: translateY(-2px);
-}
-
-.add-icon{
-  width:26px;
-  height:26px;
-  border-radius:50%;
-  background:#fff;
-  color:#6e5034;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:900;
-  line-height:1;
-}
-
-/* Responsive */
-@media (max-width: 820px){
-  .grid{ grid-template-columns:1fr; }
-  .row{ grid-template-columns:1fr; }
-  .add-page{ margin:1.5rem; padding:1.5rem; }
-  .add-header{ flex-direction:column; align-items:flex-start; }
-}
-
-  </style>
 </head>
 
 <body>
+  <!-- الهيدر -->
+  <header class="header">
+    <!-- قسم التحكم - الآن على اليمين -->
+    <div class="controls">
+      <!-- أيقونات إضافية -->
+      
+
+      <!-- زر تبديل الوضع -->
+      <button class="theme-toggle" id="themeToggle">
+        <div class="toggle-circle">
+          <i class="fas fa-sun" id="sunIcon"></i>
+        </div>
+      </button>
+    </div>
+
+    <!-- رسالة الترحيب -->
+    <div class="welcome-section">
+      <div class="welcome-text">WELCOME</div>
+      <div class="name-circle" id="nameCircle">
+        <div class="user-name" id="userName">lubna</div>
+      </div>
+    </div>
+
+    <!-- الشعار - الآن على اليسار -->
+    <div class="logo-container">
+      <div class="logo-text">Sillage</div>
+      <div class="logo-icon">
+        <img src="img/logo.png" alt="لوقو الموقع" />
+      </div>
+    </div>
+  </header>
 
 <main>
   <div class="add-page">
@@ -269,6 +139,60 @@ textarea.field{ min-height:120px; resize:vertical; }
   </div>
 </main>
 
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="footer-container">
+
+    <!-- About + Social -->
+    <div class="footer-section">
+      <h3>
+Sillage Perfumes</h3>
+      <p>
+        We offer the finest unique perfumes. We continuously seek distinctive scents that express your personality.
+      </p>
+
+      <div class="social-links">
+        <a href="#" class="social-link" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="social-link" aria-label="X (Twitter)">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="social-link" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-section">
+      <h3>Contact Information</h3>
+      <ul class="contact-info">
+        <li>
+          <i class="fas fa-map-marker-alt"></i>
+          <span>Perfume Street, Riyadh, Saudi Arabia</span>
+        </li>
+        <li>
+          <i class="fas fa-phone"></i>
+          <span>+966 11 123 4567</span>
+        </li>
+        <li>
+          <i class="fas fa-envelope"></i>
+          <span>info@perfume-store.com</span>
+        </li>
+        <li>
+          <i class="fas fa-clock"></i>
+          <span>Sunday – Thursday: 9:00 AM – 10:00 PM</span>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Copyright -->
+  <div class="copyright">
+    © 2026, All rights reserved to Sillage.
+</footer>
 
 <script src="javaScript.js"></script>
 </body>
