--- a/EditRecipePage.html
+++ b/EditRecipePage.html
@@ -4,183 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edit Recipe</title>
+  <link rel="stylesheet" href="style.css">
 
-  <style>
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      background-color:#efe1b5;
-      font-family:"Segoe UI", Tahoma, Arial, sans-serif;
-    }
-
-    /* نفس كرت صفحة وصفاتي */
-    .edit-page{
-      max-width:1100px;
-      margin:3rem auto;
-      padding:2rem;
-      background:#fff;
-      border-radius:24px;
-      border:1px solid #cdb885;
-      box-shadow:0 18px 40px rgba(110,80,52,0.18);
-    }
-
-    .edit-header{
-      margin-bottom: 2rem;
-    }
-
-    .edit-header h1{
-      margin:0;
-      font-size:2.3rem;
-      color:#6e5034;
-      font-weight:800;
-    }
-
-    .form-card{
-      border-radius:20px;
-      padding:1.6rem;
-      border:1px solid #efe1b5;
-      box-shadow: inset 0 0 0 1px rgba(205,184,133,0.28);
-    }
-
-    .grid{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1rem 1.2rem;
-      align-items:start;
-    }
-
-    .full{ grid-column: 1 / -1; }
-
-    label{
-      display:block;
-      font-weight:800;
-      color:#6e5034;
-      margin-bottom:.45rem;
-    }
-
-    .field{
-      width:100%;
-      display:block;
-      padding:.95rem 1rem;
-      border-radius:14px;
-      border:1px solid #efe1b5;
-      background:#fff;
-      color:#5d4a32;
-      outline:none;
-      transition:.2s ease;
-    }
-
-    .field:focus{
-      border-color:#cdb885;
-      box-shadow:0 0 0 4px rgba(205,184,133,0.22);
-    }
-
-    textarea.field{ min-height:120px; resize:vertical; }
-
-    .section-title{
-      margin: 1.4rem 0 .9rem;
-      padding-top:1.2rem;
-      border-top:1px dashed #efe1b5;
-      color:#6e5034;
-      font-size:1.2rem;
-      font-weight:800;
-    }
-
-    .row{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1rem;
-      margin-bottom:.9rem;
-    }
-
-    .row-1col{ grid-template-columns: 1fr; }
-
-    /* Current photo block */
-    .photo-block{
-      display:flex;
-      gap:1.2rem;
-      align-items:flex-start;
-      flex-wrap:wrap;
-      margin-top:.4rem;
-    }
-
-    .photo-preview{
-      width: 160px;
-      height: 160px;
-      border-radius:18px;
-      object-fit:cover;
-      border:2px solid #efe1b5;
-      background:#fff;
-    }
-
-    .hint{
-      margin-top:.35rem;
-      font-size:.95rem;
-      color:#9c8a6a;
-    }
-
-    /* Buttons */
-    .actions{
-      display:flex;
-      gap:.8rem;
-      flex-wrap:wrap;
-      margin-top:1.4rem;
-    }
-
-    .btn{
-      display:inline-flex;
-      align-items:center;
-      gap:.65rem;
-      padding:.95rem 1.6rem;
-      border-radius:30px;
-      cursor:pointer;
-      font-weight:800;
-      border:none;
-      transition:.25s ease;
-    }
-
-    .btn.primary{
-      background:#6e5034;
-      color:#fff;
-      box-shadow:0 8px 22px rgba(110,80,52,0.3);
-    }
-
-    .btn.primary:hover{
-      background:#8a6848;
-      transform:translateY(-2px);
-    }
-    .btn.secondary{
-     background: rgba(110,80,52,0.10);
-     color:#6e5034;
-     border:1px solid #efe1b5;
-   }
-
-   .btn.secondary:hover{
-     background:#cdb885;
-     transform: translateY(-2px);
-   }
-    
-   .add-icon{
-     width:26px;
-     height:26px;
-     border-radius:50%;
-     background:#fff;
-     color:#6e5034;
-     display:flex;
-     align-items:center;
-     justify-content:center;
-     font-weight:900;
-     line-height:1;
-  }
-    @media (max-width: 820px){
-      .grid{ grid-template-columns:1fr; }
-      .row{ grid-template-columns:1fr; }
-      .edit-page{ margin:1.5rem; padding:1.5rem; }
-    }
-  </style>
 </head>
 
 <body>
+   <!-- الهيدر -->
+  <header class="header">
+    <!-- قسم التحكم - الآن على اليمين -->
+    <div class="controls">
+      <!-- أيقونات إضافية -->
+      
+
+      <!-- زر تبديل الوضع -->
+      <button class="theme-toggle" id="themeToggle">
+        <div class="toggle-circle">
+          <i class="fas fa-sun" id="sunIcon"></i>
+        </div>
+      </button>
+    </div>
+
+    <!-- رسالة الترحيب -->
+    <div class="welcome-section">
+      <div class="welcome-text">WELCOME</div>
+      <div class="name-circle" id="nameCircle">
+        <div class="user-name" id="userName">lubna</div>
+      </div>
+    </div>
+
+    <!-- الشعار - الآن على اليسار -->
+    <div class="logo-container">
+      <div class="logo-text">Sillage</div>
+      <div class="logo-icon">
+        <img src="img/logo.png" alt="لوقو الموقع" />
+      </div>
+    </div>
+  </header>
 
 <main>
   <div class="edit-page">
@@ -195,73 +54,55 @@
         <div class="grid">
           <div>
             <label for="name">Recipe Name</label>
-            <input class="field" id="name" name="name" type="text" value="Vanilla Musk Blend" required />
+            <input class="field" id="name" name="name" type="text" required />
           </div>
 
           <div>
             <label for="category">For</label>
             <select class="field" id="category" name="category" required>
+              <option value="" selected disabled>Select</option>
               <option value="Women">Women</option>
               <option value="Men">Men</option>
-              <option value="Unisex" selected>Unisex</option>
+              <option value="Unisex">Unisex</option>
             </select>
           </div>
 
           <div class="full">
             <label for="description">Description</label>
-            <textarea class="field" id="description" name="description" required>Soft vanilla with clean musk.</textarea>
+            <textarea class="field" id="description" name="description" required></textarea>
           </div>
 
-          <!-- Current photo + Change photo -->
+          <!-- Current Photo + Change Photo -->
           <div class="full">
             <label>Current Photo</label>
 
             <div class="photo-block">
-              <!-- غيري src للصورة الحالية للوصفة -->
+              <!-- JS will replace src based on ?id= -->
               <img id="currentPhoto" class="photo-preview" src="img/vanilla.jpg" alt="Current recipe photo" />
 
               <div style="flex:1; min-width:260px;">
                 <label for="photo">Change Photo</label>
                 <input class="field" id="photo" name="photo" type="file" accept="image/*" />
-                <div class="hint">If you upload a new photo, it will replace the current one.</div>
               </div>
             </div>
           </div>
         </div>
 
         <h3 class="section-title">Ingredients</h3>
-        <div id="ingredientsWrap">
-          <div class="row ingredient-row">
-            <div>
-              <label>Name</label>
-              <input class="field" type="text" name="ingredient_name[]" value="White Musk" required />
-            </div>
-            <div>
-              <label>Amount</label>
-              <input class="field" type="text" name="ingredient_qty[]" value="8ml" required />
-            </div>
-          </div>
-        </div>
+        <div id="ingredientsWrap"></div>
 
         <div class="actions">
           <button class="btn secondary" type="button" id="addIngredientBtn">
-           <span class="add-icon">+</span> Add Ingredient
+            <span class="add-icon">+</span> Add Ingredient
           </button>
         </div>
 
         <h3 class="section-title">Instructions</h3>
-        <div id="stepsWrap">
-          <div class="row row-1col step-row">
-            <div>
-              <label>Step 1</label>
-              <input class="field" type="text" name="step_text[]" value="Mix fixative with musk." required />
-            </div>
-          </div>
-        </div>
+        <div id="stepsWrap"></div>
 
         <div class="actions">
           <button class="btn secondary" type="button" id="addStepBtn">
-           <span class="add-icon">+</span> Add Step
+            <span class="add-icon">+</span> Add Step
           </button>
         </div>
 
@@ -274,13 +115,12 @@
 
           <div>
             <label for="videoUrl">Video URL</label>
-            <input class="field" id="videoUrl" name="videoUrl" type="url" value="https://www.youtube.com/" />
+            <input class="field" id="videoUrl" name="videoUrl" type="url" placeholder="https://youtube.com/..." />
           </div>
         </div>
 
-        <div class="actions">
-          <button class="btn primary" type="submit"> Update Recipe
-          </button>
+        <div class="actions" style="justify-content:center; margin-top:1.4rem;">
+          <button class="btn primary" type="submit">Update Recipe</button>
         </div>
 
       </form>
@@ -289,27 +129,65 @@
   </div>
 </main>
 
-<script>
-  // Preview new photo if user selects one
-  const photoInput = document.getElementById("photo");
-  const currentPhoto = document.getElementById("currentPhoto");
 
-  photoInput.addEventListener("change", () => {
-    const file = photoInput.files && photoInput.files[0];
-    if (!file) return;
-    const url = URL.createObjectURL(file);
-    currentPhoto.src = url;
-  });
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="footer-container">
 
-  // Submit (Phase 1 simulation) -> redirect to My Recipes
-  document.getElementById("recipeForm").addEventListener("submit", (e) => {
-    e.preventDefault();
-    // هنا لاحقًا تربطينه بالحفظ الحقيقي
-    window.location.href = "my-recipes.html";
-  });
-</script>
+    <!-- About + Social -->
+    <div class="footer-section">
+      <h3>
+Sillage Perfumes</h3>
+      <p>
+        We offer the finest unique perfumes. We continuously seek distinctive scents that express your personality.
+      </p>
 
-<!-- JS المشترك حقكم -->
-<script src="javaScript.js"></script>
+      <div class="social-links">
+        <a href="#" class="social-link" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="social-link" aria-label="X (Twitter)">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="social-link" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-section">
+      <h3>Contact Information</h3>
+      <ul class="contact-info">
+        <li>
+          <i class="fas fa-map-marker-alt"></i>
+          <span>Perfume Street, Riyadh, Saudi Arabia</span>
+        </li>
+        <li>
+          <i class="fas fa-phone"></i>
+          <span>+966 11 123 4567</span>
+        </li>
+        <li>
+          <i class="fas fa-envelope"></i>
+          <span>info@perfume-store.com</span>
+        </li>
+        <li>
+          <i class="fas fa-clock"></i>
+          <span>Sunday – Thursday: 9:00 AM – 10:00 PM</span>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Copyright -->
+  <div class="copyright">
+    © 2026, All rights reserved to Sillage.</div>
+</footer>
+
+
+
+  <!-- JS -->
+  <script src="javaScript.js"></script>
 </body>
 </html>
