--- a/MyRecipes.html
+++ b/MyRecipes.html
@@ -4,208 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Recipes</title>
-
-  <!-- CSS -->
-  <style>
    
-body {
-  background-color: #efe1b5;
-}
+  <link rel="stylesheet" href="style.css">
 
-/* الحاوية الرئيسية */
-.my-recipes-page {
-  max-width: 1300px;
-  margin: 3rem auto;
-  padding: 2rem;
-  background-color: #fff;
-  border-radius: 24px;
-  box-shadow: 0 18px 40px rgba(110, 80, 52, 0.18);
-  border: 1px solid #cdb885;
-}
 
-/* عنوان الصفحة + زر */
-.my-recipes-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 2.5rem;
-}
-
-.my-recipes-header h1 {
-  font-size: 2.3rem;
-  color: #6e5034;
-  font-weight: 800;
-}
-
-/* زر إضافة وصفة */
-.add-recipe-btn {
-  background: linear-gradient(135deg, #6e5034, #6e5034);
-  color: #fff;
-  padding: 0.9rem 1.8rem;
-  border-radius: 30px;
-  text-decoration: none;
-  font-weight: 700;
-  transition: 0.3s ease;
-  box-shadow: 0 8px 22px rgba(110, 80, 52, 0.3);
-}
-
-.add-recipe-btn:hover {
-  background: #8a6848;
-  color: #fff;
-  transform: translateY(-2px);
-}
-
-/* كرت الجدول */
-.recipes-table-container {
-  background-color: #fff;
-  border-radius: 20px;
-  padding: 1.5rem;
-  border: 1px solid #efe1b5;
-  box-shadow: inset 0 0 0 1px rgba(205, 184, 133, 0.3);
-  overflow-x: auto;
-  direction: ltr;
-}
-
-/* الجدول */
-.recipes-table {
-  width: 100%;
-  border-collapse: collapse;
-  min-width: 900px;
-}
-
-/* الهيدر */
-.recipes-table thead {
-  background-color: #6e5034;
-}
-
-.recipes-table th {
-  padding: 1.1rem;
-  color: #fff;
-  font-weight: 800;
-  text-align: left;
-  border-bottom: 2px solid #cdb885;
-}
-
-/* الخلايا */
-.recipes-table td {
-  padding: 1.1rem;
-  color: #5d4a32;
-  border-bottom: 1px solid #efe1b5;
-  vertical-align: top;
-  text-align: left;
-}
-
-/* صفوف الجدول */
-.recipes-table tbody tr {
-  transition: background-color 0.25s ease;
-}
-
-.recipes-table tbody tr:hover {
-  background-color: rgba(239, 225, 181, 0.45);
-}
-
-/* الوصفة (صورة + اسم) */
-.recipe-info {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-weight: 700;
-  color: #6e5034;
-  text-decoration: none;
-}
-
-.recipe-info img {
-  width: 68px;
-  height: 68px;
-  border-radius: 16px;
-  object-fit: cover;
-  border: 2px solid #efe1b5;
-  background-color: #fff;
-}
-
-/* المكونات والخطوات */
-.recipe-list {
-  padding-right: 1.2rem;
-  margin: 0;
-}
-
-.recipe-list li {
-  font-size: 0.95rem;
-  margin-bottom: 0.35rem;
-}
-
-/* الروابط */
-.action-link {
-  display: inline-block;
-  padding: 0.4rem 1rem;
-  border-radius: 20px;
-  font-size: 0.9rem;
-  font-weight: 700;
-  text-decoration: none;
-  transition: 0.25s ease;
-}
-
-/* تعديل */
-.action-edit {
-  background-color: #efe1b5;
-  color: #6e5034;
-}
-
-.action-edit:hover {
-  background-color: #cdb885;
-}
-
-/* حذف */
-.action-delete {
-  background-color: rgba(110, 80, 52, 0.12);
-  color: #6e5034;
-}
-
-.action-delete:hover {
-  background-color: #6e5034;
-  color: #fff;
-}
-
-/* فيديو */
-.video-link {
-  color: #6e5034;
-  font-weight: 700;
-  text-decoration: underline;
-}
-
-.no-video {
-  color: #9c8a6a;
-  font-style: italic;
-}
-
-/* إعجابات */
-.likes-count {
-  font-weight: 800;
-  color: #6e5034;
-  text-align: center;
-}
-
-/* للجوال */
-@media (max-width: 768px) {
-  .my-recipes-page {
-    margin: 1.5rem;
-    padding: 1.5rem;
-  }
-
-  .my-recipes-header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
-  }
-
-  .my-recipes-header h1 {
-    font-size: 1.9rem;
-  }
-}
-
-  </style>
 </head>
 <body>
+  <!-- الهيدر -->
+  <header class="header">
+    <!-- قسم التحكم - الآن على اليمين -->
+    <div class="controls">
+      <!-- أيقونات إضافية -->
+      
+
+      <!-- زر تبديل الوضع -->
+      <button class="theme-toggle" id="themeToggle">
+        <div class="toggle-circle">
+          <i class="fas fa-sun" id="sunIcon"></i>
+        </div>
+      </button>
+    </div>
+
+    <!-- رسالة الترحيب -->
+    <div class="welcome-section">
+      <div class="welcome-text">WELCOME</div>
+      <div class="name-circle" id="nameCircle">
+        <div class="user-name" id="userName">lubna</div>
+      </div>
+    </div>
+
+    <!-- الشعار - الآن على اليسار -->
+    <div class="logo-container">
+      <div class="logo-text">Sillage</div>
+      <div class="logo-icon">
+        <img src="img/logo.png" alt="لوقو الموقع" />
+      </div>
+    </div>
+  </header>
 
 <main>
   <div class="my-recipes-page">
@@ -263,18 +98,18 @@ body {
             <td class="likes-count">22</td>
 
             <td>
-              <a href="EditRecipePage.html" class="action-link action-edit">Edit</a>
+              <a href="EditRecipePage.html?id=1" class="action-link action-edit">Edit</a>
             </td>
 
             <td>
-              <a href="my-recipes.html" class="action-link action-delete">Delete</a>
+              <a href="MyRecipes.html" class="action-link action-delete">Delete</a>
             </td>
           </tr>
 
           <!-- Recipe 2 -->
           <tr>
             <td>
-              <a href="view-recipe.html" class="recipe-info">
+              <a href="ViewRecipePage.html" class="recipe-info">
                 <img src="img/amber.webp" alt="Recipe Image">
                 <span>Rose Amber Blend</span>
               </a>
@@ -301,11 +136,11 @@ body {
             <td class="likes-count">9</td>
 
             <td>
-              <a href="edit-recipe.html" class="action-link action-edit">Edit</a>
+              <a href="EditRecipePage.html?id=2" class="action-link action-edit">Edit</a>
             </td>
 
             <td>
-              <a href="my-recipes.html" class="action-link action-delete">Delete</a>
+              <a href="MyRecipes.html" class="action-link action-delete">Delete</a>
             </td>
           </tr>
 
@@ -315,6 +150,61 @@ body {
 
   </div>
 </main>
+
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="footer-container">
+
+    <!-- About + Social -->
+    <div class="footer-section">
+      <h3>
+Sillage Perfumes</h3>
+      <p>
+        We offer the finest unique perfumes. We continuously seek distinctive scents that express your personality.
+      </p>
+
+      <div class="social-links">
+        <a href="#" class="social-link" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="social-link" aria-label="X (Twitter)">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="social-link" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-section">
+      <h3>Contact Information</h3>
+      <ul class="contact-info">
+        <li>
+          <i class="fas fa-map-marker-alt"></i>
+          <span>Perfume Street, Riyadh, Saudi Arabia</span>
+        </li>
+        <li>
+          <i class="fas fa-phone"></i>
+          <span>+966 11 123 4567</span>
+        </li>
+        <li>
+          <i class="fas fa-envelope"></i>
+          <span>info@perfume-store.com</span>
+        </li>
+        <li>
+          <i class="fas fa-clock"></i>
+          <span>Sunday – Thursday: 9:00 AM – 10:00 PM</span>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Copyright -->
+  <div class="copyright">
+    © 2026, All rights reserved to Sillage.
+</footer>
 
 
 
